[gd_scene load_steps=14 format=3 uid="uid://ckeoqpwp3e8e8"]

[ext_resource type="Script" uid="uid://tpqrb8of474l" path="res://scene/Frog/frog.gd" id="1_ifsse"]
[ext_resource type="Texture2D" uid="uid://dfspgp8dwm512" path="res://assets/enemies/frog/frog_sheet.png" id="2_ifsse"]
[ext_resource type="PackedScene" uid="uid://dlksar768s8s0" path="res://scene/Shooter/shooter.tscn" id="3_714gp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_naygd"]
radius = 9.0
height = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3yobd"]
atlas = ExtResource("2_ifsse")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5dgy"]
atlas = ExtResource("2_ifsse")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey8gc"]
atlas = ExtResource("2_ifsse")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efkph"]
atlas = ExtResource("2_ifsse")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cqq8"]
atlas = ExtResource("2_ifsse")
region = Rect2(140, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifsse"]
atlas = ExtResource("2_ifsse")
region = Rect2(175, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgb42"]
atlas = ExtResource("2_ifsse")
region = Rect2(210, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f6u5y"]
animations = [{
"frames": [{
"duration": 7.0,
"texture": SubResource("AtlasTexture_3yobd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5dgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey8gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efkph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cqq8")
}],
"loop": true,
"name": &"FrogIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifsse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgb42")
}],
"loop": true,
"name": &"FrogJump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_naygd"]
size = Vector2(24, 16)

[node name="Frog" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_ifsse")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_naygd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_f6u5y")
animation = &"FrogIdle"
autoplay = "FrogIdle"
frame_progress = 0.5685084

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_naygd")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-18, 0)
target_position = Vector2(0, 30)

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="Shooter" parent="." instance=ExtResource("3_714gp")]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_2visible_on_screen_notifier_2d_screen_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
